--- a/.gitignore
+++ b/.gitignore
@@ -107,5 +107,5 @@ local/
 # =======================
 # 文档生成的临时文件（保留已有的文档）
 # =======================
-# 注意：我们保留 docs/ 目录下的文档
+# 注意：我们保留 docs/ 和 data/ 目录下的文档和数据
 # 如果有自动生成的文档，在此添加
