--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@xyflow/react": "^12.9.3",
     "clsx": "^2.0.0",
     "localforage": "^1.10.0",
+    "nanoid": "^5.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.66.1",
     "react-router-dom": "^6.20.0",
+    "reactflow": "^11.11.4",
+    "zod": "^4.1.13",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
